# textgrid-convert

./: .gitignore  README.MD  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  pythonapp.yml  pythonpackage.yml  pythonpackage_macos.yml  pythonpackage_multios.yml  pythonpackage_ubuntu.yml  pythonpackage_win.yml
docs/: conf.py  index.rst
docs/source/: modules.rst  textgrid_convert.rst
src/textgrid_convert/: ArgParser.py  ParserABC.py  __init__.py  __main__.py  iotools.py  preproctools.py  revParser.py  sbvParser.py  srtParser.py  textgridtools.py  ttextgrid_convert.py
srt_convert/: ArgParser.py  __main__.py  sbvParser.py  srtParser.py  textgridtools.py
tests/: globals.py  test_argparse.py  test_cli.py  test_iotools.py  test_local.py  test_preprocesstools.py  test_revParser.py  test_sbvparser.py  test_srtparser.py  test_textgridtools.py
tests/resources/: downsub.srt
tests/resources/gold_files/: captions1.sbv  captions1.srt
tests/resources/sample_files/backup/: captions.sbv  downsub.sbv  rev_sample.json  rev_sample_textgrid.txt  rev_sample_two_speakers.json  rev_sample_two_speakers_textgrid.txt  test.TextGrid  test_short.TextGrid  true_textgrid_long.TextGrid  true_textgrid_short.TextGrid  vibez1_4.TextGrid.txt  writeout.txt
tests/resources/sample_files/srts/: issue_43.srt  issue_43_fulltext.srt  issue_44.srt
textgrid_convert/: ArgParser.py  ParserABC.py  __main__.py  iotools.py  preproctools.py  revParser.py  sbvParser.py  srtParser.py  textgrid_convert.py  textgridtools.py  ttextgrid_convert.py
(+1 files in other folders)
